tune jvm options